--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,10 @@
 }
 
 .hero-background-img{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     object-fit: cover;
     filter: brightness(0.3);
-
 }
 
 .app-logo{
@@ -43,6 +42,7 @@
 .desktop-nav-item{
     margin: 20px;
     font-family: 'Lato', sans-serif;
+    font-weight:300;
     color:white;
     font-size:1.05em
 }
@@ -64,6 +64,7 @@
 
 .hero-text{
     font-family: 'Lato', sans-serif;
+    font-weight:300;
     color:white;
 }
 
@@ -77,6 +78,7 @@
     margin-left: 30px;
     margin-top: 20px;
     font-family: 'Lato', sans-serif;
+    font-weight:300;
     font-size: 20px;
     border-radius: 20px;
     padding-left: 25px;
@@ -98,3 +100,83 @@
     color:#e67e22;
 }
 
+.description-text-area-container{
+    display: flex;
+    flex-direction: column;
+    /* width: 100%; */
+    align-items: center;
+}
+
+.description-text-area-container .title{
+    font-size:25px;
+    margin: 30px;
+    font-family: 'Lato', sans-serif;
+    font-weight:300;
+    color:#555;
+}
+
+.description-text-area-container .title-bar{
+    background-color:#e67e22;
+    width: 100px;
+    height: 3px;
+    margin-bottom: 30px;
+}
+
+.description-text-area-container .body{
+    margin-left:30px;
+    margin-right:30px;
+    font-family: 'Lato', sans-serif;
+    font-weight:300;
+    color:#555;
+}
+
+.feature-cards-container{
+    display: flex;
+    flex-direction:column;
+    margin: 30px;
+}
+
+.feature-card i{
+    font-size:60px;
+    color:#e67e22;
+}
+.feature-card .title{
+    font-family: 'Lato', sans-serif;
+    font-weight:300;
+    color:#555;
+    font-size: 20px;
+    margin-bottom:15px;
+}
+
+.feature-card .text{
+    font-family: 'Lato', sans-serif;
+    font-weight:300;
+    color:#555;
+    font-size: 15px;
+    margin-bottom:25px;
+}
+
+.food-display-grid-container{
+    display:grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(2,1fr);
+}
+
+.food-display-grid-container .img-container{
+    overflow: hidden;
+}
+
+.food-display-grid-container .img-container img{
+    width: 100%;
+    height: 100%;
+    filter: brightness(0.7);
+    transform:scale(1.15);
+    object-fit: cover;
+    transition: all 0.3s;
+}
+
+.food-display-grid-container .img-container:hover img{
+    transform:scale(1.05);
+    filter: brightness(1);
+
+}
