--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 .hero-background-img{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     object-fit: cover;
     filter: brightness(0.3);
@@ -26,7 +26,7 @@
     right:0px;
     margin-top:40px;
     margin-right:20px;
-
+    display:none;
 }
 
 .desktop-nav-bar{
@@ -41,6 +41,22 @@
     font-weight:300;
     color:white;
     font-size:1.05em
+}
+
+
+.hamburger div {
+    width: 24px;
+    height: 4px;
+    margin: 8px 0;
+    background-color: white;
+}
+
+.mobile-nav {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    margin: 30px;
 }
 
 .hero-text-container{
@@ -126,16 +142,22 @@
     color:#555;
 }
 
-.feature-cards-container{
+/* .feature-cards-container{
     display: flex;
     flex-direction:column;
     margin: 30px;
+} */
+
+.feature-card{
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .feature-card i{
     font-size:60px;
     color:#e67e22;
 }
+
 .feature-card .title{
     font-family: 'Lato', sans-serif;
     font-weight:300;
@@ -337,34 +359,51 @@
     margin-bottom: 20px;
 }
 
-.review-bar-container{
+/* .review-bar-container{
     display: flex;
     flex-direction:column;
     position:relative;    
 }
 
+.review-bar-container::after{
+    background: url("./img/back-customers.jpg");
+    top: 0;
+    left: 0;
+    filter:brightness(0.5);
+} */
+
+.review-bar-container {
+    display: flex;
+    flex-direction:column;
+    position: relative;
+    background: rgba(0, 0, 0, 0.8); /* If our image is bright, we can tone it down with this darker overlay */
+}
+
+.review-bar-container::after {
+content: "";
+position: absolute;
+background-image: url("./img/back-customers.jpg");
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+z-index: -1;
+}
+  
+/* 
 .review-background-img{
     width: 100vw;
     height: 100vh;
     object-fit: cover;
     filter: brightness(0.3);
 }
-
-.review-bar-text-container{
-    position: absolute;
-    display:flex;
-    flex-direction: column;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-}
-
+ */
 .review-bar-title-container{
     display:flex;
     flex-direction: column;
     width: 100%;
     align-items: center;
+
 }
 
 .review-bar-title{
@@ -374,7 +413,11 @@
     color:white;
     margin: 30px;
     text-align: center;
+    filter:brightness(1);
+
 }
+
+
 
 .review-bar-title-container::after{
     content:"";
@@ -383,7 +426,7 @@
     height: 3px;
     background-color:#e67e22;
 }
-
+ 
 .review-cards-container{
     margin: 30px;
 }
@@ -409,17 +452,106 @@
     visibility:hidden;
 }
 
+
 .customer-card {
     display:flex;
     flex-direction:row;
+    margin-bottom: 70px;
 }
 
 .customer-img-container{
-    width:50px;
-    height: 50px;
+    width:40px;
+    height: 40px;
+    border-radius: 50px;
+    overflow:hidden;
 }
 
 .customer-img{
     width:100%;
     height: 100%;
+}
+
+.customer-name-container{
+    display:flex;
+    flex-direction:row;
+    align-items:center;
+    margin-left: 10px;
+}
+
+.customer-name{
+    font-family: 'Lato', sans-serif;
+    font-weight:300;
+    color:white;
+    text-align:left;
+}
+
+
+@media screen and (min-width: 768px) {
+    .desktop-nav-bar-container{
+        display:flex;
+    }
+    
+    .mobile-nav{
+        display:none;
+    }
+
+    .description-text-area-container .body{
+        font-family: 'Lato', sans-serif;
+        font-weight:300;
+        color:#555;
+        font-size: 15px;
+        width: 600px;
+
+    }
+
+    .feature-cards-container{
+        display: flex;
+        flex-direction:columns;
+        margin:30px;
+    }
+
+    .feature-card{
+        margin: 20px;
+    }
+
+    .steps-content-container{
+        width:100%;
+        height: 100%;
+        display:flex;
+        flex-direction:row;
+        align-items:center;
+        justify-content:center;
+    }
+
+    .steps-bar-container .img-container img{
+        width: 40%;
+        height:auto;
+    }
+
+    .location-cards{
+        display:flex;
+        flex-direction:row;
+    }
+
+    .location-card{
+        margin: 15px;
+    }
+    
+    .review-bar-container{
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+    }
+
+    .review-cards-container{
+        display:flex;
+        flex-direction:row;
+        height:100%;
+        width:80%;
+    }
+
+    .review-card{
+        margin-left: 40px;
+        margin-right: 40px;
+    }
 }
