--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,19 @@
     padding-bottom: 10px;
 
     border-color:#e67e22;
+    transition: all 0.3s;
+}
+
+.hero-text-button1:hover{
+    filter:brightness(0.7);
+    cursor: pointer;
+}
+
+.hero-text-button2:hover{
+    filter:brightness(0.7);
+    background-color:#e67e22;
+    cursor: pointer;
+    color:white;
 }
 
 .hero-text-button1{
@@ -568,6 +581,136 @@ z-index: -1;
     opacity:0;
 }
 
+.feedback-section-container{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+}
+
+.feedback-section-title-container{
+    display:flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+
+}
+
+.feedback-section-title{
+    font-size:25px;
+    font-family: 'Lato', sans-serif;
+    font-weight:300;
+    color:black;
+    margin: 30px;
+    text-align: center;
+    filter:brightness(1);
+
+}
+
+.feedback-section-title-container::after{
+    content:"";
+    display:block;
+    width: 100px;
+    height: 3px;
+    background-color:#e67e22;
+    margin-bottom: 30px;
+}
+
+form{
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    width: 100%;
+}
+
+.mobile-feedback-form {
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    width: 100%;
+}
+
+.mobile-feedback-form>div{
+    width:60%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+
+    font-size:20px;
+    font-family: 'Lato', sans-serif;
+    font-weight:300;
+
+    display:flex;
+    flex-direction:column;
+}
+
+.mobile-feedback-form>div>input, .mobile-feedback-form>div>label,
+.mobile-feedback-form>div>select, .checkbox-container p,
+.message-container textarea{
+    margin-top: 5px;
+    margin-bottom: 5px;
+
+    font-size:20px;
+    font-family: 'Lato', sans-serif;
+    font-weight:300;
+}
+
+.mobile-feedback-form .checkbox-container input{
+    width:15px;
+    height:15px;
+}
+
+.submit-button{
+    background-color: #e67e22;
+    width: 150px;
+    font-size:20px;
+    font-family: 'Lato', sans-serif;
+    font-weight:300;
+    color: white;
+    border-radius:30px;
+    border-color:transparent;
+    padding: 10px;
+    margin:30px;
+    transition: all 0.3s;
+}
+
+.submit-button:hover{
+    filter:brightness(0.7);
+    cursor: pointer;
+}
+
+.desktop-feedback-form{
+    display:none;
+    flex-direction:row;
+    width:700px;
+}
+
+.desktop-feedback-form>div{
+    display:flex;
+    flex-direction:column;
+    margin:30px;
+}
+
+.desktop-feedback-form .question-container{
+    width:100%;
+}
+
+.desktop-feedback-form .input-container{
+    width:100%;
+}
+
+.desktop-feedback-form .question-container>*{
+    font-size:20px;
+    font-family: 'Lato', sans-serif;
+    font-weight:300;
+    margin:11px;
+}
+
+.desktop-feedback-form .input-container>*{
+    font-size:20px;
+    font-family: 'Lato', sans-serif;
+    font-weight:300;
+    margin:9px;
+}
+
 @media screen and (min-width: 768px) {
     .desktop-nav-bar-container{
         display:flex;
@@ -649,5 +792,13 @@ z-index: -1;
 
     .pricing-card .card-title h5{
         font-size:10px;
+    }
+
+    .mobile-feedback-form{
+        display:none;
+    }
+
+    .desktop-feedback-form{
+        display:flex;
     }
 }
