fixed step index in mobile platform

--- a/styles.css
+++ b/styles.css
@@ -274,7 +274,9 @@
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
-    width: 20px;
+    width: 25px;
+    height: 25px;
+
     border: 2px solid;
     border-color: #e67e22;
     color: #e67e22;
